# python_testing

./: abc_testing.py  attribute_testing.py  blit_testing.py  blit_testing_class.py  building_placement1.py  building_placement2.py  code_whisperer_testing.py  collisions.py  contains_point_testing.py  controller_testing.py  deepcopy_testing.py  dictionary_testing.py  flet_map.py  gpt_testing.py  intersection_polygon_testing.py  json_testing.py  large_case.json  map_function.py  minima_testing.py  nearest_point_testing.py  numba_testing.py  operations.json  panelising_testing.py  patch_moving_testing.py  pick_testing.py  pid_controller.ipynb  pid_testing.py  poi.json  pois.py  potentialplot.py  presentation_stuff.py  pyproject.toml  routes.json  rtree_testing.py  sapin.py  scenario_generation.py  setter_testing.py  simplefly.py  streamplot.py  temp.py
dynamic_panelising_1.py/: best_implementation.ipynb  distance_along_perimeter.ipynb  distance_along_perimeter.py  dynamic_panels1.py  panels.npy  panels_alpha.npy  pcp_diff.ipynb  performance_testing.ipynb  plotting_panels.ipynb
